name:                roguebard
version:             0.0.0.1
author:              Brian McKeever
maintainer:          keever@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable rogue
    main-is:             Main.hs
    build-depends:       base >=4.6,
        containers,
        data-ordlist,
        gloss,
        gloss-game,
        gloss-juicy,
        gloss-raster,
        JuicyPixels,
        mtl,
        random,
        stringtable-atom,
        unordered-containers
    hs-source-dirs:      src
    default-language:    Haskell2010
    ghc-options:         -Wall -Werror -threaded
