name:                roguebard
version:             0.0.0.1
author:              Brian McKeever
maintainer:          keever@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable rogue
    main-is:             Main.hs
    build-depends:       base >=4.6,
        containers,
        data-ordlist,
        gloss,
        gloss-game,
        gloss-juicy,
        gloss-raster,
        htiled,
        JuicyPixels,
        linear,
        mtl,
        random,
        StateVar,
        unordered-containers,
        vector,
        vector-algorithms
    hs-source-dirs:      src
    default-language:    Haskell2010
    ghc-options:         -Wall -threaded -O2 -auto-all -rtsopts -caf-all -fno-warn-unused-do-bind

test-suite doctests
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       src/doctests.hs
  build-depends: base, doctest >= 0.8
