name:                roguebard
version:             0.0.0.1
author:              Brian McKeever
maintainer:          keever@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable main
     main-is:             Main.hs
     build-depends:       base >=4.6,
        containers,
        data-ordlist,
        deepseq,
        gloss,
        gloss-game,
        gloss-juicy,
        gloss-raster,
        htiled,
        JuicyPixels,
        linear,
        mtl,
        random,
        roguebard,
        StateVar,
        unordered-containers,
        vector,
        vector-algorithms

     hs-source-dirs:      src
     default-language:    Haskell2010
     ghc-options:         -Wall -threaded -O2 -auto-all -rtsopts -caf-all -fno-warn-unused-do-bind

executable profile
     main-is:             Profile.hs
     build-depends:       base >=4.6,
        containers,
        data-ordlist,
        deepseq,
        gloss,
        gloss-game,
        gloss-juicy,
        gloss-raster,
        htiled,
        JuicyPixels,
        linear,
        mtl,
        random,
        roguebard,
        StateVar,
        unordered-containers,
        vector,
        vector-algorithms

     hs-source-dirs:      src
     default-language:    Haskell2010
     ghc-options:         -Wall -threaded -O2 -auto-all -rtsopts -caf-all -fno-warn-unused-do-bind

Library
    build-depends:       base >=4.6,
        containers,
        data-ordlist,
        deepseq,
        gloss,
        gloss-game,
        gloss-juicy,
        gloss-raster,
        htiled,
        JuicyPixels,
        linear,
        mtl,
        random,
        StateVar,
        unordered-containers,
        vector,
        vector-algorithms
    exposed-modules: 
                     Components.Physics
                     Components.Renderable
                     EntityComponentSystem
                     GameState
                     Miscellaneous
                     Tiles
                     Vector
    hs-source-dirs:      src
    default-language:    Haskell2010
    ghc-options:         -Wall -threaded -O2 -auto-all -rtsopts -caf-all -fno-warn-unused-do-bind

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       Tests
  Ghc-Options:          -Wall -threaded
  Main-Is:              Spec.hs
  Build-Depends:        base,
                      containers,
                      roguebard,
                      hspec,
                      linear,
                      vector-algorithms,
                      vector
